python-tooz (0.13.1-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.

 -- Thomas Goirand <zigo@debian.org>  Fri, 27 Mar 2015 19:04:19 +0100

python-tooz (0.4-1) unstable; urgency=medium

  * New upstream release.
  * Replaced (build-)depends of python-posix-ipc by python-sysv-ipc.

 -- Thomas Goirand <zigo@debian.org>  Tue, 30 Sep 2014 08:52:36 +0000

python-tooz (0.3-3) unstable; urgency=medium

  * Only kill memcached if the packaging script started it.
  * Also cleans .testrepository on clean.

 -- Thomas Goirand <zigo@debian.org>  Tue, 30 Sep 2014 08:03:50 +0000

python-tooz (0.3-2) unstable; urgency=medium

  * Check if memcached is started before building, start it if it isn't. Thanks
    to Lucas Nussbaum for the bug report. (Closes: #759976)

 -- Thomas Goirand <zigo@debian.org>  Mon, 01 Sep 2014 02:06:47 +0000

python-tooz (0.3-1) unstable; urgency=medium

  * Initial release. (Closes: #758138)

 -- Thomas Goirand <zigo@debian.org>  Thu, 14 Aug 2014 21:57:41 +0800