@@ -2,6 +2,7 @@ python-tooz (0.13.1-1) experimental; urgency=medium
 
   * New upstream release.
   * Fixed (build-)depends for this release.
+  * Reworked the way to run unit tests.
 
  -- Thomas Goirand <zigo@debian.org>  Fri, 27 Mar 2015 19:04:19 +0100
 
